--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <footer>
         <div>
             Coded with 💚 by <a href="mailto:abollinger@partez.net">Antoine Bollinger</a>&nbsp;|&nbsp;
-            <a href="https://github.com/antoinebollinger"><i class="fa-brands fa-github"></i></a>&nbsp;|&nbsp;
+            <a href="https://github.com/Antoine-Bollinger/qrcode"><i class="fa-brands fa-github"></i></a>&nbsp;|&nbsp;
             <a href="https://www.linkedin.com/in/antoinebollinger/"><i
                     class="fa-brands fa-linkedin"></i></a>&nbsp;|&nbsp;
             <a href="https://partez.net">partez.net</a>
