--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#4F5B93">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/png" href="favicon.ico" />
-    <title>QR-Code Generator by Abollinger</title>
+    <title>QR-Code Generator by partez</title>
     <meta name="keywords" content="qrcode,qr-code,generator,free">
     <meta property="og:title" content="QR-Code Generator">
     <meta property="og:description"
         content="Here you can easily create and download your QR-Code without having to sign in or paying something. It's free, no account is required, and it will always be this way.">
-    <meta property="og:site_name" content="QR-Code Generator by Abollinger">
+    <meta property="og:site_name" content="QR-Code Generator by partez">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="1000">
     <meta property="og:image:height" content="566">
@@ -49,13 +49,13 @@
                 </div>
                 <div id="qrcode__width" hidden>
                     <div class="input__group">
-                        <label for="dimensions">Dimensions:</label>
-                        <input name="dimensions" type="number" min="0" max="512" value="512" />
+                        <label for="width">Width:</label>
+                        <input name="width" type="number" min="0" max="512" value="512" />
                         <p>px</p>
                     </div>
                 </div>
             </div>
-            <button type="submit">Generate QR Code</button>
+            <button type="submit">Generate QR-Code</button>
         </form>
         <div id="qrcode__container"></div>
         <div id="qrcode__downloader">
