--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KZD32KXZXT"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-KZD32KXZXT');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#4F5B93">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/png" href="favicon.ico" />
-    <title>{{ documentTitle }}</title>
+    <title>QR-Code Generator by partez</title>
     <meta name="keywords" content="qrcode,qr-code,generator,free">
     <meta property="og:title" content="QR-Code Generator">
     <meta property="og:description"
@@ -24,29 +33,33 @@
 
 <body>
     <header>
-        <form method="get" id="changeLang" class="align__end">
-            <div class="input__group">{{ lang }}
-                <select onChange="this.form.submit()" name="lang">
-                    <option value="en">EN</option>
-                    <option value="de">DE</option>
-                    <option value="fr">FR</option>
-                    <option value="es">ES</option>
-                    <option value="pt">PT</option>
+        <form method="get" id="changeLang" class="flex_end">
+            <div class="input_group" id="selectLang">
+                <label for="lang">Language</label>
+                <select name="lang" onmousedown="(function(e){ e.preventDefault(); })(event, this)">
+                    <option value="en"></option>
+                    <option value="de"></option>
+                    <option value="fr"></option>
+                    <option value="es"></option>
+                    <option value="pt"></option>
                 </select>
             </div>
         </form>
-        <h1>{{ title }}</h1>
-        <p>{{ intro }}</p>
+        <h1>Welcome to partez's QR-Code free generator!</h1>
+        <p>Here you can easily create and download your QR-Code without having to sign in or paying something.
+            <strong>It's free</strong>, <strong>no account is required</strong>, and <strong>it will always be this
+                way</strong>.
+        </p>
     </header>
     <section>
-        <form novalidate id="generateQRCode">
+        <form novalidate id="generateQRCode" class="flex_center">
             <div>
                 <input type="url" name="url" placeholder="https://qrcode.partez.net" required />
-                <p class="input__error" id="qrcode__error"></p>
+                <p class="input_error" id="qrcode__error"></p>
             </div>
             <div class="input__main">
-                <div class="input__group" id="qrcode__type">
-                    <label for="format">{{ format }}</label>
+                <div class="input_group" id="qrcode__type">
+                    <label for="format">Image's&nbsp;format:</label>
                     <select name="format">
                         <option data-function="printSVG" value="svg">SVG</option>
                         <option data-function="printIMG" value="png">PNG</option>
@@ -55,32 +68,63 @@
                     </select>
                 </div>
                 <div id="qrcode__width" hidden>
-                    <div class="input__group">
-                        <label for="width">{{ width }}</label>
+                    <div class="input_group">
+                        <label for="width">Width&nbsp;:</label>
                         <input name="width" type="number" min="0" max="512" value="512" />
                         <p>px</p>
                     </div>
                 </div>
             </div>
-            <button type="submit">{{ generate }}</button>
+            <button type="submit">Generate QR-Code</button>
         </form>
         <div id="qrcode__container"></div>
         <div id="qrcode__downloader">
-            <button type="button" hidden>{{ download }}</button>
+            <button type="button" hidden>Download</button>
         </div>
     </section>
-    <footer>
+    <footer class="flex_center">
         <div>
-            {{ coded }} <a href="mailto:abollinger@partez.net">Antoine Bollinger</a>&nbsp;|&nbsp;
+            Coded with 💚 by <a href="mailto:abollinger@partez.net">Antoine Bollinger</a>&nbsp;|&nbsp;
             <a href="https://github.com/Antoine-Bollinger/qrcode"><i class="fa-brands fa-github"></i></a>&nbsp;|&nbsp;
             <a href="https://www.linkedin.com/in/antoinebollinger/"><i
                     class="fa-brands fa-linkedin"></i></a>&nbsp;|&nbsp;
             <a href="https://partez.net">partez.net</a>
         </div>
         <div>
-            <em><small>{{ generated }}</small></em>
+            <em><small>This interface use the <a href="https://www.npmjs.com/package/qrcode">node-qrcode</a> package
+                    to generate the QR-Code.</small></em>
         </div>
     </footer>
+    <dialog>
+        <div class="dialog__body">
+            <div>
+                <p class="close_input"><span class="flex">X</span></p>
+                <br>
+                <form class="flex_start">
+                    <div class="flex">
+                        <input type="radio" name="lang" value="en" id="en" onchange="this.form.submit()" />
+                        <label for="en">English</label>
+                    </div>
+                    <div class="flex">
+                        <input type="radio" name="lang" value="de" id="de" onchange="this.form.submit()" />
+                        <label for="de">Deutsch</label>
+                    </div>
+                    <div class="flex">
+                        <input type="radio" name="lang" value="fr" id="fr" onchange="this.form.submit()" />
+                        <label for="fr">Français</label>
+                    </div>
+                    <div class="flex">
+                        <input type="radio" name="lang" value="es" id="es" onchange="this.form.submit()" />
+                        <label for="es">Español</label>
+                    </div>
+                    <div class="flex">
+                        <input type="radio" name="lang" value="pt" id="pt" onchange="this.form.submit()" />
+                        <label for="pt">Português</label>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </dialog>
 </body>
 
 </html>
